--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.movetow10"
+        applicationId "me.yangxy.movetow10"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
